...
                android:weightSum="2"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="left"
                    android:gravity="left"
...
