...
    <string name="channels">Channels</string>
    <string name="track_live_game">Track Live Game</string>
    <string name="thur_jan_14">Thur, Jan 14</string>
    <string name="vs_tor">VS. TOR</string>
    <string name="otw_4_3">OTW 4-3</string>

    <string name="CBCSports"><a href="https://www.cbc.ca/sports">CBCSports</a></string>
    <string name="Sportsnet"><a href="https://www.sportsnet.ca">Sportsnet</a></string>
    <string name="TSN"><a href="https://www.tsn.ca">TSN</a></string>

    <string name="CalgaryFlames"><a href="https://www.nhl.com/flames/tickets/">https://www.nhl.com/flames/tickets/</a></string>
    <string name="EdmontonOilers"><a href="https://www.ticketmaster.ca/Edmonton-Oilers-tickets/">https://www.ticketmaster.ca/Edmonton-Oilers-tickets/</a></string>
    <string name="MontréalCanadiens"><a href="https://www.nhl.com/canadiens/tickets">https://www.nhl.com/canadiens/tickets</a></string>
...
