<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8sp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6sp"
    >
    <ImageView
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:id="@+id/playerProfile"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playerName"
        android:layout_marginStart="50sp"
        android:text="@string/player_name"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playerTeam"
        android:text="Player Team"
        android:layout_marginStart="50sp"
        android:layout_below="@+id/playerName"
        />
</RelativeLayout>
</androidx.cardview.widget.CardView>