<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standing_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:src="@drawable/jets" />

        <TextView
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="left"
            android:gravity="center"
            android:text="Team Name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="28dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray" />

</androidx.cardview.widget.CardView>


    <!--<?xml version="1.0" encoding="utf-8"?>-->

    <!--<TextView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    android:id="@android:id/text1"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:textAppearance="?android:attr/textAppearanceListItemSmall"-->
    <!--    android:gravity="center_vertical"-->
    <!--    android:paddingStart="?android:attr/listPreferredItemPaddingStart"-->
    <!--    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"-->
    <!--    android:minHeight="?android:attr/listPreferredItemHeightSmall" />-->