...
                <TextView
                    android:id="@+id/team1"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Winnipeg Jets"
                    android:textSize="18dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
...
